2010-12-17  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        Incorrect encoding of some constants in ARMv7 JIT
        https://bugs.webkit.org/show_bug.cgi?id=51273
        <rdar://problem/8650210>

        When using immediate encoding 3 we need to write the byte
        that holds a duplicated value.

        * assembler/ARMv7Assembler.h:
        (JSC::ARMThumbImmediate::makeEncodedImm):
2010-12-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Incorrect encoding of some constants in ARMv7 JIT
        https://bugs.webkit.org/show_bug.cgi?id=51273

        Add a few tests for different byte patterns in immediates.

        * fast/js/constant-encoding-expected.txt: Added.
        * fast/js/constant-encoding.html: Added.
        * fast/js/script-tests/constant-encoding.js: Added.

Canonical link: https://commits.webkit.org/64633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74291 268f45cc-cd09-0410-ab3c-d52691b4dbfc